[project]
name = "actual-http-wrapper"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "travis-morton", email = "travisclaymorton@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "requests-mock>=1.12.1",
    "types-requests>=2.32.4.20250913",
]
