[project]
name = "actual-http-wrapper"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "travis-morton", email = "travisclaymorton@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "requests-mock>=1.12.1",
    "ruff>=0.14.8",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff]
line-length = 120
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN201"]
